@@ -516,3 +516,19 @@ class TestLogWalker(TestCaseWithSubversionRepository):
                           'trunk/data/fg', 'trunk/data/fg/f1', 'trunk/db',
                           'trunk/db/f1', 'trunk/db/f2']), 
                 set(walker.find_children("trunk", 3)))
+
+    def test_fetch_property_change_only_trunk(self):
+        repos_url = self.make_client('d', 'dc')
+        self.build_tree({'dc/trunk/bla': "data"})
+        self.client_add("dc/trunk")
+        self.client_commit("dc", "My Message")
+        self.client_set_prop("dc/trunk", "some:property", "some data\n")
+        self.client_commit("dc", "My 3")
+        self.client_set_prop("dc/trunk", "some2:property", "some data\n")
+        self.client_commit("dc", "My 2")
+        self.client_set_prop("dc/trunk", "some:property", "some data\n")
+        self.client_commit("dc", "My 4")
+        walker = logwalker.LogWalker(transport=SvnRaTransport(repos_url))
+        self.assertEquals({'trunk': ('M', None, -1)}, walker.get_revision_paths(3))
+
+
